--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -1,10 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="全部"
-        android:textSize="70dp"/>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/colorGray3"
+            android:orientation="horizontal"
+            >
+            <!-- BT -->
+            <LinearLayout
+                android:id="@+id/ll_tab_bt"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <TextView
+                    android:id="@+id/tv_tab_bt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BT"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25dp"
+
+                    />
+            </LinearLayout>
+            <!-- 折扣 -->
+            <LinearLayout
+                android:id="@+id/ll_tab_discount"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <TextView
+                    android:id="@+id/tv_tab_discount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="折扣"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25dp"
+
+                    />
+            </LinearLayout>
+            <!-- H5 -->
+            <LinearLayout
+                android:id="@+id/ll_tab_h5"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <TextView
+                    android:id="@+id/tv_tab_h5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="H5"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25dp"
+
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:id="@+id/v_indicate_line"
+            android:layout_width="60dp"
+            android:layout_height="3dp"
+            android:background="#CE0000"
+            android:layout_alignParentBottom="true"
+            />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager_all"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
 
 </FrameLayout>
