--- a/app/src/main/res/layout/fragment_bt_home.xml
+++ b/app/src/main/res/layout/fragment_bt_home.xml
@@ -5,5 +5,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="home"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
