--- a/app/src/main/res/layout/fragment_bt_home.xml
+++ b/app/src/main/res/layout/fragment_bt_home.xml
@@ -1,35 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorGray">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorWhiteAndBlack">
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ScrollView
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        android:id="@+id/convenientBanner"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        app:canLoop="true"/>
+
+    <RelativeLayout
+        android:id="@+id/rl_tuijian"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/convenientBanner"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/tv_tuijian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="推荐"
+            android:textColor="@color/colorOrange1" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignLeft="@+id/tv_tuijian"
+            android:layout_alignRight="@+id/tv_tuijian"
+            android:layout_below="@+id/tv_tuijian"
+            android:background="@color/colorAccent" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_tuijian"
+            android:layout_marginTop="5dp">
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_gameall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_below="@+id/rl_tuijian"
+        android:padding="5dp">
 
-        <RelativeLayout
-            android:id="@+id/rl_tuijian"
+        <TextView
+            android:id="@+id/tv_gameall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="全部"
+            android:textColor="@color/colorOrange1" />
+
+        <View
             android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="120dp">
-            <TextView
-                android:id="@+id/tv_tuijian"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="推荐"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_below="@+id/tv_tuijian"
-                android:layout_alignLeft="@+id/tv_tuijian"
-                android:layout_alignRight="@+id/tv_tuijian"
-                android:background="@color/colorAccent"/>
-        </RelativeLayout>
+            android:layout_height="1dp"
+            android:layout_alignLeft="@+id/tv_gameall"
+            android:layout_alignRight="@+id/tv_gameall"
+            android:layout_below="@+id/tv_gameall"
+            android:background="@color/colorAccent" />
 
-    </ScrollView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_gameall"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tv_gameall"
+            android:layout_marginTop="5dp">
+        </android.support.v7.widget.RecyclerView>
 
+    </RelativeLayout>
 
+    </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
