开服页面修改 下载器实现下载功能，但是没有下载器界面，监听下载进度等 下载完成后自动安装功能未实现

--- a/app/src/main/res/layout/fragment_bt_home.xml
+++ b/app/src/main/res/layout/fragment_bt_home.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhiteAndBlack">
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <RelativeLayout
@@ -82,5 +83,5 @@
     </RelativeLayout>
 
     </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 </RelativeLayout>
