--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,71 +4,197 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.aygames.twomonth.aybox.activityfb.GiftActivity">
+
     <RelativeLayout
         android:id="@+id/ll_game_head"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorOrange1">
+
         <ImageView
             android:id="@+id/iv_game_back"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@mipmap/title_back"/>
+            android:background="@mipmap/title_back" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="游戏详情"
             android:textColor="@color/colorWhite"
-            android:textSize="25dp"
-            android:text="游戏详情"/>
+            android:textSize="15dp" />
+        <ImageView
+            android:id="@+id/iv_game_download"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/ic_launcher_round"/>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_game_head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll_game_head"
+        android:background="@color/colorWhiteAndBlack">
+
+        <ImageView
+            android:id="@+id/iv_game_icon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"
+            android:background="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/tv_game_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_game_icon"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/iv_game_icon"
+            android:textColor="@color/colorBlack"
+            android:textSize="15dp"
+            android:text="游戏名称" />
+
+        <TextView
+            android:id="@+id/tv_game_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_game_name"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/iv_game_icon"
+            android:text="130M"
+            android:textColor="@color/colorPrimary" />
+        <Button
+            android:id="@+id/bt_game_download"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:background="@drawable/btn_login"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/colorWhite"
+            android:text="下载"/>
+        <TextView
+            android:id="@+id/tv_game_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/iv_game_icon"
+            android:layout_alignBottom="@+id/iv_game_icon"
+            android:textColor="@color/colorOrange1"
+            android:text="123"
+            />
+
+    </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_game_head">
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/rl_game_head">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/tv_game_jj"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="游戏简介"
+                    android:textColor="@color/colorOrange1" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignLeft="@+id/tv_game_jj"
+                    android:layout_alignRight="@+id/tv_game_jj"
+                    android:layout_below="@+id/tv_game_jj"
+                    android:background="@color/colorAccent" />
+
+                <TextView
+                    android:id="@+id/tv_game_yxjj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_game_jj"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_game_jt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_game_yxjj"
+                    android:layout_marginTop="10dp"
+                    android:text="游戏截图"
+                    android:textColor="@color/colorOrange1" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignLeft="@+id/tv_game_jt"
+                    android:layout_alignRight="@+id/tv_game_jt"
+                    android:layout_below="@+id/tv_game_jt"
+                    android:background="@color/colorAccent" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycle_game_yxjt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/tv_game_jt">
+
+                </android.support.v7.widget.RecyclerView>
+
+                <TextView
+                    android:id="@+id/tv_game_fl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/recycle_game_yxjt"
+                    android:text="本站下载专属福利"
+                    android:textColor="@color/colorOrange1"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignLeft="@+id/tv_game_fl"
+                    android:layout_alignRight="@+id/tv_game_fl"
+                    android:layout_below="@+id/tv_game_fl"
+                    android:background="@color/colorAccent" />
+                <TextView
+                    android:id="@+id/tv_game_welfare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:lineSpacingExtra="9dp"
+                    android:layout_below="@+id/tv_game_fl"
+                    android:text="heihei"
+                    />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </ScrollView>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <RelativeLayout
-            android:id="@+id/rl_game_head"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/iv_game_icon"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_launcher"/>
-            <TextView
-                android:id="@+id/tv_game_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/iv_game_icon"
-                android:layout_alignTop="@+id/iv_game_icon"
-                android:layout_marginLeft="20dp"
-                android:text="游戏名称"/>
-            <TextView
-                android:id="@+id/tv_game_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/iv_game_icon"
-                android:layout_below="@+id/tv_game_name"
-                android:layout_marginLeft="20dp"
-                android:textColor="@color/colorPrimary"
-                android:text="130M"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/rl_game_head">
-        </RelativeLayout>
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorOrange"
+        android:visibility="gone">
 
     </RelativeLayout>
-    </ScrollView>
 </RelativeLayout>
