--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorOrange1">
             <ImageView
                 android:id="@+id/iv_user"
                 android:layout_width="35dp"
