--- a/app/src/main/res/layout/fragment_bt_start.xml
+++ b/app/src/main/res/layout/fragment_bt_start.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhiteAndBlack"
+    android:paddingBottom="10dp">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
