--- a/app/src/main/res/layout/item_game_start_time.xml
+++ b/app/src/main/res/layout/item_game_start_time.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp" android:layout_height="wrap_content"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:padding="5dp"
-    android:layout_marginLeft="20dp"
     android:layout_marginRight="3dp"
     android:layout_marginTop="15dp"
-    android:background="@drawable/rl_back">
+    android:background="@color/colorWhiteAndBlack">
     <ImageView
         android:id="@+id/iv_icon_start"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/tv_name_start"
         android:layout_width="wrap_content"
@@ -24,7 +24,8 @@
         android:maxEms="5"
         android:singleLine="true"
         android:textStyle="bold"
-        android:text="游戏名称"/>
+        android:text="游戏名称"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/tv_type_start"
         android:layout_width="wrap_content"
@@ -33,7 +34,8 @@
         android:layout_alignLeft="@+id/tv_name_start"
         android:layout_marginTop="2dp"
         android:layout_below="@+id/tv_name_start"
-        android:text="leixing"/>
+        android:text="leixing"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/tv_service_start"
         android:layout_width="wrap_content"
@@ -43,18 +45,19 @@
         android:layout_alignLeft="@+id/tv_name_start"
         android:textColor="@color/green"
         android:textStyle="bold"
-        android:text="qufu"/>
+        android:text="qufu"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/tv_time_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
+        android:clickable="false"
         android:paddingRight="5dp"
         android:layout_below="@+id/iv_icon_start"
         android:layout_marginTop="2dp"
-        android:visibility="gone"
-        android:background="@drawable/btn_login"
-        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:textColor="@color/colorOrange1"
         android:text="开服时间"/>
 
 </RelativeLayout>
