--- a/app/src/main/res/layout/fragment_bt_center.xml
+++ b/app/src/main/res/layout/fragment_bt_center.xml
@@ -56,19 +56,19 @@
     </RelativeLayout>
     <ToggleButton
         android:id="@+id/toggle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:background="@drawable/toggle_selector"
+        android:textOff="开启选项列表"
+        android:textOn="关闭选项列表"
         android:layout_below="@+id/rl_center_type"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toggle">
-
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
