--- a/app/src/main/res/layout/fragment_bt_gift.xml
+++ b/app/src/main/res/layout/fragment_bt_gift.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
+
+    <ListView
+        android:id="@+id/lv_gift"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/bt_gift_center"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+    </ListView>
+
+    <Button
+        android:id="@+id/bt_gift_center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="gift"/>
+        android:layout_height="30dp"
+        android:padding="5dp"
+        android:layout_marginTop="5dp"
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="礼包中心"
+        android:background="@drawable/bt_back_gift_left"/>
+
+    <Button
+        android:id="@+id/bt_gift_new"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:padding="5dp"
+        android:layout_marginTop="5dp"
+
+        android:text="新上架礼包"
+        android:background="@drawable/bt_back_gift_right_no"/>
+
 
 </RelativeLayout>
