--- a/app/src/main/res/layout/fragment_bt_gift.xml
+++ b/app/src/main/res/layout/fragment_bt_gift.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/lv_gift"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/bt_gift_center"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/bt_gift_center">
 
     </ListView>
 
@@ -16,13 +17,13 @@
         android:id="@+id/bt_gift_center"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:padding="5dp"
-        android:layout_marginTop="5dp"
-
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="礼包中心"
-        android:background="@drawable/bt_back_gift_left"/>
+
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/bt_back_gift_left"
+        android:padding="5dp"
+        android:text="礼包中心" />
 
     <Button
         android:id="@+id/bt_gift_new"
@@ -30,11 +31,11 @@
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/bt_back_gift_right_no"
 
-        android:text="新上架礼包"
-        android:background="@drawable/bt_back_gift_right_no"/>
+        android:padding="5dp"
+        android:text="新上架礼包" />
 
 
 </RelativeLayout>
